# basic-autonomy

./: README.md  main.py  pyproject.toml
01-probabilistic-state-estimation/: grid_world_probability.py
01_probabilistic_state_estimation/: grid_world_probability.py
02-finite-state-machine/: vacuum_agent.py
02_finite_state_machine/: vacuum_agent.py
03-graph-search-n-path-planning/: astar_grid.py
03_graph_search_n_path_planning/: astar_grid.py
04_control/: pid_controller.py
behavior/: vacuum_agent.py
perception/: detector.py
planning/: astar_grid.py
shared/: robot_state.py
state_estimation/: simple_2d_filter.py
